# moveit_shelf_picking

./: CMakeLists.txt  README.md  moveit_shelf_picking.rosinstall  package.xml
config/: config_baxter.yaml
config/imarkers/: imarker_cart.csv  imarker_goal.csv  imarker_start.csv
include/baxter_benchmark/: baxter_benchmark.h
include/moveit_shelf_picking/: baxter_benchmark.h
launch/: baxter_visualize.launch  debug_settings.gdb  moveit.rviz  run_benchmark.launch
meshes/: goal_bin.stl
src/: baxter_benchmark.cpp  baxter_benchmark_main.cpp  collision_bug.cpp
